@@ -21,7 +21,6 @@
   ob_start();
 
   session_start();
-  require_once("../db.conf.php");
   require_once("../db.php");
   require_once("../fix_magic_quotes.php");
   require_once("functions.php");
